crates/solidity-v2/testing/snapshots/diagnostics_output/semantic/cyclic_inheritance/deep/generated/slang/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 3

Error: Circular inheritance is not allowed.
   ╭─[input.sol:4:1]
   │
 4 │ contract X is Y {}
   │ ─────────┬────────  
   │          ╰────────── Error occurred here.
───╯

Error: Circular inheritance is not allowed.
   ╭─[input.sol:5:1]
   │
 5 │ contract Y is Z {}
   │ ─────────┬────────  
   │          ╰────────── Error occurred here.
───╯

Error: Circular inheritance is not allowed.
   ╭─[input.sol:6:1]
   │
 6 │ contract Z is X {}
   │ ─────────┬────────  
   │          ╰────────── Error occurred here.
───╯
